# Individual-Route-Planning-Tool

./: CMakeLists.txt  Diagrama sem nome.drawio  README.md  main.cpp
classes/: DataParser.cpp  DataParser.h  Location.h  Menu.cpp  Menu.h  Planning.cpp  Planning.h
classes/data_structures/: Edge.h  Location.h  MutablePriorityQueu.h  UrbanMap.h  Vertex.h  cases.h
classes/input/: input1.txt
classes/output/: output1.txt
data/: DistancesTest.csv  DistancesTest_updated.csv  LocationsTest.csv  LocationsTest_updated.csv
docs/: Doxyfile
docs/html/: _data_parser_8h.html  _data_parser_8h.js  _data_parser_8h_source.html  _menu_8cpp.html  _menu_8h.html  _menu_8h_source.html  _mutable_priority_queu_8h.html  _mutable_priority_queu_8h.js  _mutable_priority_queu_8h_source.html  _planning_8cpp.html  _planning_8cpp.js  _planning_8h.html  _planning_8h.js  _planning_8h_source.html  _urban_map_8h.html  _urban_map_8h.js  _urban_map_8h_source.html  annotated.html  annotated_dup.js  cases_8h.html  cases_8h.js  cases_8h_source.html  class_edge-members.html  class_edge.html  class_edge.js  class_menu-members.html  class_menu.html  class_menu.js  class_mutable_priority_queue-members.html  class_mutable_priority_queue.html  class_urban_map-members.html  class_urban_map.html  class_urban_map.js  class_vertex-members.html  class_vertex.html  class_vertex.js  classes.html  dir_b02e4219757ae4e3a0f1714873865bbf.html  dir_b02e4219757ae4e3a0f1714873865bbf.js  dir_d1fe0de8739b5e9dab12c6f575bc6595.html  (+25 more)
input/: input.txt  input1.txt
output/: estimation.txt  output.txt  output1.txt
(+75 files in other folders)
